<package>
  <name>netft_rdt_driver</name>
  <version>0.1.3</version>
  <description>Driver for NetFT sensor that uses Raw Data Transfer (RDT) protocol.</description>
  <maintainer email="wagnelib@cmp.felk.cvut.cz">Libor Wagner</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/netft_rdt_driver</url>

  <author>Derek King</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <cpp lflags="-L${prefix}/lib -lnetft_rdt_driver -Wl,-rpath,${prefix}/lib" cflags="-I${prefix}/include"/>
  </export>
</package>
